# vcpkg_test

./: .gitignore  LICENSE
CMakeHelperModules/: CMakeLists.txt
CMakeHelperModules/modules/: VersioningHelpers.cmake
ProjectA/: CMakeLists.txt  CMakePresets.json  Config.cmake.in  conanfile.py
ProjectA/Component1/: CMakeLists.txt
ProjectA/Component2/: CMakeLists.txt  Config.cmake.in  LogSingleton.h  LogWrapper.h  temp.cpp
ProjectA/Component3/: CMakeLists.txt  Config.cmake.in  helper.cpp  helper.h
ProjectB/: CMakeLists.txt  main.cpp
